fixed overflow styling

--- a/website/styles/styles.scss
+++ b/website/styles/styles.scss
@@ -134,15 +134,10 @@ body {
 }
 
 .bigImage {
-  position: absolute;
+  position: fixed;
   right: 10%;
   bottom: 5%;
   width: 750px;
-
-  img {
-    width: 100%;
-    height: 100%;
-  }
 }
 
 @media only screen and (max-width: 1650px) {
@@ -232,4 +227,10 @@ body {
       display: none;
     }
   }
+}
+
+.container {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
